--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,10 @@ background-clip: text;
 body{
   background-color: #0A0523;
 }
+.card-bg{
+border-radius: 25.995px;
+border-bottom: 1.604px solid rgba(255, 255, 255, 0.10);
+border-left: 1.604px solid rgba(255, 255, 255, 0.10);
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.24) 0%, rgba(16, 13, 35, 0.24) 100%);
+box-shadow: 0px 7.999px 17.797px 0px rgba(0, 0, 0, 0.11);
+}
